# cookiecutter_aiml

./: README.md  cookiecutter.json
{{cookiecutter.projectname}}/: README.MD  config.toml  conftest.py  docker-compose.yaml  pyproject.toml
{{cookiecutter.projectname}}/core/config/: config.py
{{cookiecutter.projectname}}/core/models/: forecast.py
{{cookiecutter.projectname}}/test/: test_utilities.py
{{cookiecutter_aiml}}/: Dockerfile  LICENSE.txt  docker-compose.yaml  pyproject.toml
{{cookiecutter_aiml}}/api/: app.py
{{cookiecutter_aiml}}/core/config/: sanity_check.py
{{cookiecutter_aiml}}/core/database/: database.py
{{cookiecutter_aiml}}/core/utilities/: consts.py  definitions.py  utilities.py
{{cookiecutter_aiml}}/test/: test_metadata.py
