[tool.poetry]
name = "{{cookiecutter_project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_name}}"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rich = "^12.0.0"
loguru = "^0.6.0"
pymongo = "3.12"
cryptography = "^36.0.1"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
protobuf = "3.20.1"
dash = "^2.5.1"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"
black = {version = "^22.3.0", allow-prereleases = true}
rich = "^12.2.0"
typer = "^0.4.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
notebook = "^6.4.11"

[tool.black]
line-length = 119


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
